[package]
name = "zk-thresh-pro"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
rand = "0.8.5"
hex = "0.4.3"
rayon = "1.10.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
env_logger = "0.11.6"
serde_json = "1.0.139"
chrono = { version = "0.4.41",features = ["serde"] }
blake3 = "1.6.0"
typenum = "1.18.0"
generic-array = "0.14.7"
digest = "0.10.7"
zeroize = { version = "1.8.1",features = ["zeroize_derive","derive"] }
thiserror = "2.0.12"